# github-dco-reminder

./: .gitignore  Cargo.toml
src/: github-dco-reminder.rs
